<resources>
    <string name="app_name">ResourceManager</string>
    <string name="prompt_employeeid">Employee ID</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_tittle">Tittle</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_mobile">10 Digit Contact Number (Optional)</string>
    <string name="prompt_cnfrmPswrd">Confirm Password</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_password">Password</string>
    <string name="successful_password_change">Password Change Successfully</string>
    <string name="prompt_enterPassword">Enter Password to Continue</string>
    <string name="action_sign_in">Register</string>
    <string name="action_login">Login</string>
    <string name="old_password_mismatch">Incorrect Password</string>
    <string name="password">Password</string>
    <string name="drawer_menu_chngPswrd">Change Password</string>
    <string name="homescreen_welcome">Welcome</string>
    <string name="resource">Resource</string>
    <string name="prompt_empty_password_fields">New Passowrd and Confirm New Password Fields can not be left Empty!</string>
    <string name="admin_registration">Register me as Admin</string>
    <string name="admin_registration_message">Admin Registration Request Sent, You will be Notified
        within 24 Hours with your request status. Thank You</string>
    <string name="manager">manager</string>
    <string name="prompt_description">Add Request Description here</string>
    <string name="username">Username</string>
    <string name="device_info_category">Category</string>
    <string name="device_info_category_licence_no">Licence No</string>
    <string name="device_info_category_serial_no">Serial No</string>
    <string name="show_password">Show Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="request_resource">Request Resource</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_wrong_login_credentials">Invalid Login Credentials!!!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_cnfrm_password">Please Confirm Passowrd</string>
    <string name="error_cnfrm_password_mismatch">Mismatch in Password and Confirm Passowrd,Reconfirm Password</string>
    <string name="error_invalid_mobile">This Contact No. is invalid</string>
    <string name="error_invalid_password">Password length must be atleast of 4 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is Mandatory</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="req_date">Request Date</string>
    <string name="issue_date">Issue Date</string>
    <string name="successful_registeration">Successfully Registered</string>
    <string name="release_date">Release Date</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="drawer_menu_profile">Profile</string>
    <string name="drawer_menu_resources">Resources</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_inventories">Inventories</string>
    <string name="drawer_menu_new_request">Make New Request</string>
    <string name="user_image">User Image</string>
    <string name="resource_name">Resource Name</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="invalid_login">Invalid Login Credentials!!!!</string>
    <string name="enter_username">Please Enter your UserName</string>
    <string name="contnue_to_proceed">Continue</string>
    <string name="invalid_user">Invalid User</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="password_send_to_registered_id">User name received and password send to registered id</string>
    <string name="loading">Loading Please Wait</string>
    <string name="latest_version">Latest Version</string>
    <string name="product_version">Product Version</string>
    <string name="type">Type :</string>
    <string name="count">Count</string>
    <string name="assigned">Assigned:</string>
    <string name="brand">Brand</string>
    <string name="status">Status</string>
    <string name="add">ADD</string>
    <string name="no_internet">No internet Connection</string>
    <string name="admin">Admin</string>
    <string name="new_hardware_request">New Hardware Request</string>
    <string name="new_software_request">New Software Request</string>
    <string name="shared_resource">Shared Resources</string>
    <string name="description">Description:</string>
    <string name="optional_desc">Description(Optional)</string>
    <string name="enter_mcid">Enter MAC ID</string>
    <string name="enter_srvc_tag">Enter/Scan Service Tag</string>
    <string name="pick_ordr_date">Tap to Pick Order Date</string>
    <string name="add_hardware">Add Hardware</string>
    <string name="pick_rcvd_date">Tap to Pick Received Date</string>
    <string name="prompt_created_date">Date Created:</string>
    <string name="order_date">Order Date</string>
    <string name="received_date">Received Date</string>
    <string name="mcid">MAC Id:</string>
    <string name="srvc_tag">Service Tag:</string>
    <string name="others">others</string>
    <string name="nothing_selected">Nothing Selected</string>
    <string-array name="availability">
        <item>Available</item>
        <item>Unavailable</item>
    </string-array>
    <string-array name="hardware_type">
        <item>Hardware</item>
        <item>Software</item>
    </string-array>
    <string name="enter_software_name">Enter Software name</string>
    <string name="enter_licence_count">Enter Licence count</string>
    <string name="enter_licence_key">Enter Licence Key</string>
    <string name="enter_software_version">Enter Software Version</string>
    <string name="today_date">Today is :</string>
    <string name="add_software">Add New Software</string>
    <string name="licence_type">Licence Type</string>
    <string name="purchased_date">Purchased Date</string>
    <string name="valid_upto">Valid Up to</string>
    <string name="modified_by">Modified By:</string>
    <string name="modified_date">Modified Date:</string>
    <string name="created_by">Created By</string>
    <string name="one">1</string>
    <string name="delete">Delete</string>
    <string name="no_of_licenses">Number of licenses</string>
    <string name="edit">Edit</string>
    <string name="add_new_brand">+ Add new Brand</string>
    <string name="add_new_license">+ Add new License</string>
    <string name="error_requesting_api">Error Requesting api</string>
    <string name="successfully_added_new_hardware">New Hardware Added Successfully.</string>
    <string name="null_pointer_exception">Null Pointer Exception</string>
    <string name="hint_brand">Tap to Enter Brand</string>
    <string name="hint_description">Tap to Enter Description</string>
    <string name="issued_till">Issued Till:</string>
    <string name="prompt_issued_by">Tap to Enter Issued By</string>
    <string name="request_to">Request To:</string>
    <string name="device_info_sub_category">Sub Category</string>
    <string name="prompt_rqst_tittle">Request Title</string>
    <string name="tap_to_pick_date">Tap to Pick Date</string>
    <string name="hardware_resource">Hardware Resources</string>
    <string name="software_resource">Software Resources</string>
    <string name="shared_resources">Shared Resources</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="tap_to_select">Tap to Select</string>
    <string name="resource_type">Resource Type</string>
    <string name="add_new_hardware_resource">Add New Hardware Resource</string>
    <string name="service_tag">Service Tag</string>
    <string name="is_sharable">Is Sharable</string>
    <string name="ok">OK</string>
    <string name="server_error">Server Error</string>
    <string name="unable_to_connect">Unable to Connect to Server</string>
    <string name="purchased_by">Purchased By :</string>
    <string name="prompt_brand_selection">Please Select a Brand</string>
    <string name="prompt_licence_type_selection">Please Select Licence Type</string>
    <string name="user_record_updated">User Record Updated Successfully</string>
    <string name="cnfrm_logout">Are you sure you want to Logout?</string>
    <string name="ok_to_continue">Click YES to continue, NO to Abort</string>
    <string name="prompt_new_licence_type">Enter License Type :</string>
    <string name="hint_licence_type">Select Licence Type</string>
    <string name="application_name">Resource Manager</string>
    <string name="request_date">Request Date</string>
    <string name="empty">--</string>
    <string name="issue_by">Issue By:</string>
    <string name="search">Search</string>
    <string name="total">Total:</string>
    <string name="available">Available:</string>
    <string name="approved_pending_requests">Approved</string>
    <string name="pending">Pending:</string>
    <string name="requested_by">Requested By</string>
    <string name="request_title">Request Title</string>
    <string name="approve">Approve</string>
    <string name="assigning_to">Assigning To:</string>
    <string name="date_of_assigning">Date of Assigning</string>
    <string name="assign">Assign</string>
    <string name="bad_api">Bad Response</string>
    <string name="update">Update</string>
    <string name="prompt_my_requests">My Requests</string>
    <string name="drawer_menu_my_requests">My Requests</string>
    <string name="prompt_name">Name</string>
    <string name="hardware_name">Hardware Name</string>
    <string name="hardware_count">Count</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="requested_device">Requested Device</string>
    <string name="requested_to">Requested To</string>
    <string name="request_status">Request Status</string>
    <string name="requested_resource">Requested Resource</string>
    <string name="promt_delete_confirmation">Are you sure you want to delete this Request?</string>
    <string name="tap_to_select_brand">Select Brand</string>
    <string name="tap_to_select_type">Select Type</string>
    <string name="prompt_hardware_type_selection">Please Select a Hardware Type</string>
    <string name="shared">Shared</string>
    <string name="propmt_software_name">Software Name :</string>
    <string name="prompt_software_version">Software Version</string>
    <string name="licence_key">Licence Key :</string>
    <string name="added_on">Added on :</string>
    <string name="select_category">Please Select Category</string>
    <string name="prompt_select_subcategory">Please Select Sub Category</string>
    <string name="prompt_select_whom_to_request">Please Select Whome you want to Address this Request</string>
    <string name="type_requiredfield">Type * :</string>
    <string name="brand_requiredfield">Brand * :</string>
    <string name="macid_required_field">Mac Id * :</string>
    <string name="service_tag_required_field">Service Tag * :</string>
    <string name="order_date_req_field">Order Date * :</string>
    <string name="received_date_req_field">Received Date * :</string>
    <string name="name_req_field">Name * :</string>
    <string name="enter_name">Enter Name</string>
</resources>