<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="0.7"
        android:background="@color/themeBlue"
        android:orientation="horizontal"
        android:padding="@dimen/textfields_padding">

        <TextView
            style="@style/HeaderFields"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:id="@+id/assign_resource_list_header_first"
            android:layout_weight="1"
            android:text="@string/prompt_name" />

        <TextView
            style="@style/HeaderFields"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:id="@+id/assign_resource_list_header_second"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/prompt_username" />
    </LinearLayout>

    <ListView
        android:id="@+id/assign_resource_lv_listView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:background="@color/blue"
        android:padding="@dimen/small_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/assigning_to"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/assign_resource_txt_assigning_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username"
            android:textColor="@color/white" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:padding="@dimen/textfields_padding">

        <EditText
            android:id="@+id/assign_resource_edt_description"
            style="@style/BorderedTextFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hint_gray"
            android:hint="@string/description" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/assign_resource_btn_assign"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_weight="0.8"
        android:background="@drawable/styled_green_button_layout"
        android:text="@string/assign"
        android:textColor="@color/white" />

</LinearLayout>